# led-name-badge

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
assets/: led-badge-monitor.service
src/: font.rs  init.rs  lib.rs  main.rs  monitor.rs  protocol.rs  renderer.rs  usb.rs
