[package]
name = "led-badge"
version = "0.1.0"
edition = "2021"
description = "LED name badge programming tool"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusb = "0.9"
anyhow = "1"
chrono = "0.4"
libc = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
sysinfo = "0.30"
reqwest = { version = "0.11", features = ["json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gethostname = "0.4"

[features]
default = ["hidapi"]
hidapi = ["dep:hidapi"]
nvidia = ["dep:nvml-wrapper"]

[dependencies.hidapi]
version = "2"
optional = true

[dependencies.nvml-wrapper]
version = "0.10"
optional = true

[[bin]]
name = "led-badge"
path = "src/main.rs"
